Substitute obsoleted + deleted methods and classes
Note: Currently in non-working state. This is merely a backup.